syntax = "proto3";

package proto;

option go_package = "common/proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse) {}
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {}
}

// 订单状态枚举
enum OrderStatus {
  PENDING = 0;      // 待支付
  PAID = 1;         // 已支付
  SHIPPED = 2;      // 已发货
  COMPLETED = 3;    // 已完成
  CANCELED = 4;     // 已取消
}

// 订单项
message OrderItem {
  int64 product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
}

// 订单
message Order {
  int64 id = 1;
  int64 user_id = 2;
  repeated OrderItem items = 3;
  double total_price = 4;
  OrderStatus status = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateOrderRequest {
  int64 user_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  int64 order_id = 1;
  string message = 2;
}

message GetOrderRequest {
  int64 order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}

message UpdateOrderStatusRequest {
  int64 order_id = 1;
  OrderStatus status = 2;
}

message UpdateOrderStatusResponse {
  bool success = 1;
  string message = 2;
}

message DeleteOrderRequest {
  int64 order_id = 1;
}

message DeleteOrderResponse {
  bool success = 1;
  string message = 2;
}
